fix rightcol alignment

--- a/telemeta/htdocs/css/telemeta.css
+++ b/telemeta/htdocs/css/telemeta.css
@@ -99,7 +99,6 @@ h3 {
     z-index: 1;
     float: right;
     width: 362px;
-    margin-top: 10px;
     border: 1px dotted #999;
     padding: 6px;
     background-color: #eee;
